# the-two-towers

./: .gitignore  Dockerfile  README.md  compose.yaml  public.env.sample  pyproject.toml
.github/workflows/: ci.yml
checks/: conftest.py  test_api.py  test_engine.py  test_repo_integrity.py  test_tasks.py
demo-output/: README.md  for-you.json  rebuild-summary.json  related.json  status-ready.json
deploy/: app.yaml  namespace.yaml  qdrant.yaml  rebuild-job.yaml
guides/: ARCHITECTURE.md
watchtower/: __init__.py  app.py  config.py  engine.py  storage.py  tasks.py  vector_store.py
